--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🎮 لعبة إكس أو | X-O Game</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
     <!-- شاشة الترحيب -->
@@ -148,10 +148,8 @@
         </div>
     </div>
 
-    <script src="{{ url_for('static', filename='js/game.js') }}"></script>
+    <script src="static/js/gameLogic.js"></script>
+    <script src="static/js/game.js"></script>
 </body>
 </html>
-
-
-
 
